# pyiq4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pyiq4/: __init__.py  auth.py  client.py  exceptions.py  models.py  utils.py
tests/: test_auth.py  test_client.py  test_utils.py
tests/fixtures/: login_page.html
