[project]
name = "pyiq4"
version = "0.1.0"
description = "Async Python client for the Rain Bird IQ4 cloud API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tiago Mota", email = "tiago@swissborg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/tiagomota/pyiq4"
Repository = "https://github.com/tiagomota/pyiq4"
"Bug Tracker" = "https://github.com/tiagomota/pyiq4/issues"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src/pyiq4 --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/pyiq4"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/pyiq4"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B", "A", "C90"]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.10",
]
